<resources>
    <string name="app_name">Attendance Management System</string>
    <string name="logo_image">logo</string>
    <string name="scroolview">scroolview</string>
    <string name="button1_text">Sign In As Student</string>
    <string name="stuent_icon">student</string>
    <string name="button2_text">Sign In As Teacher</string>
    <string name="teacher_icon">teacher</string>
    <string name="button3_text">Sign In As Parent</string>
    <string name="parent_icon">parent</string>
    <string name="signin_illustrator">signin_illustrator</string>
    <string name="login">Login</string>
    <string name="enrollment_number">Enrollment number</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="back_arrow">back_arrow</string>
    <string name="password">Password</string>
    <string name="login_id">Login id</string>
    <string name="enrollment_number_child">Enrollment number (Child)</string>
    <string name="mobile_number_parent">Mobile number (Parent)</string>
    <string name="mob_no_text">+91 9999999999</string>
    <string name="please_enter_the_otp_sent_to">Please enter the OTP sent to</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="student_home_fragment">student home fragment</string>
    <string name="student_attendance_fragment">student attendance fragment</string>
    <string name="student_leave_fragment">student leave fragment</string>
    <string name="username_top">Hi Folk</string>
    <string name="leave_name">Leave Name</string>
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="staff_name">Staff Name</string>
    <string name="submit">Submit</string>
    <string name="leave_description">Leave Description (Note : Do not enter special characters like \' , ; , = , $ and also Emojis)</string>
    <string name="leave_application_name">Leave Application Name</string>
    <string name="sem_no">3SEM</string>
    <string name="student_name">keval shah</string>
    <string name="subject_name">DBMS (3360702)</string>
    <string name="professor_name">Prof Sanjay Bhalgama</string>
    <string name="mark">Mark</string>
    <string name="rejected">Rejected</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="all">All</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_absent">All Absent</string>
    <string name="all_present">All Present</string>
    <string name="attendance_code_val">HJI18L</string>
    <string name="attendance_code_label">Attendance Code :</string>
    <string name="semester">Semester</string>
    <string name="student_name_lab">Student Name</string>
    <string name="subject">Subject</string>
    <string name="generate">Generate</string>
    <string name="student_semester">Student Semester</string>
    <string name="month_amp_year"><![CDATA[Month & Year]]></string>
    <string name="attendance_percentage">70%</string>
    <string name="leave_from_to_date">Mon 16 Aug - Wed 18 Aug</string>
    <string name="enr_no">206090307004</string>
    <string name="student_attendance">Student Attendance</string>
    <string name="class_attendance">Class Attendance</string>
    <string name="overall_attendance">Overall Attendance</string>
    <string name="present_percentage">86%</string>
    <string name="absent_percentage">14%</string>
    <string name="present">Present</string>
    <string name="subjects">Subjects</string>
    <string name="absent">Absent</string>
    <string name="student_enrollment_no">Student Enrollment No</string>
    <string name="attendance_code">000000</string>
    <string name="timer_val">02:00</string>
    <string name="save">Save</string>
    <string name="student_count_val">0 / 0</string>
    <string name="division">Division</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_division">Select Division</string>
    <string name="expiry_time">Expiry Time</string>
    <string name="take">Take</string>
    <string name="expiry_time_val">1</string>
    <string name="location_check">Location Check</string>
    <string name="smart_attendance">Smart Attendance</string>
    <string name="logout">Logout</string>
    <string name="contact_faculty">Contact Faculty</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="attendance">Attendance</string>
    <string name="home">Home</string>
    <string name="leave">Leave</string>
    <string name="student">Student</string>
    <string name="prof_name">Prof Sanjay Bhalgama</string>
    <string name="prof_number">+91 9999999999</string>
    <string name="stu_enr_number">206090307004</string>
    <string name="div">6A</string>
    <string name="attendance_count">90 / 100</string>
    <string name="full_name">Full Name</string>
    <string name="enrollment_no">Enrollment No</string>
    <string name="parent_mobile_number">Parent Mobile Number</string>
    <string name="sem_no_text">Sem No</string>
    <string name="batch">Batch</string>
    <string name="div_eg_6a">Div (eg 6A)</string>
</resources>