<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".teacher_attend_details">

    <TextView
        android:id="@+id/sub_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:fontFamily="@font/muli"
        android:hint="@string/select_subject"
        android:padding="10dp"
        android:textSize="@dimen/_16sdp"
        app:drawableEndCompat="@drawable/baseline_arrow_drop_down_24" />

    <TextView
        android:id="@+id/div_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background"
        android:fontFamily="@font/muli"
        android:hint="@string/select_division"
        android:padding="10dp"
        android:textSize="@dimen/_16sdp"
        app:drawableEndCompat="@drawable/baseline_arrow_drop_down_24" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/smart_attendance"
            android:textSize="@dimen/_16sdp" />

        <Switch
            android:id="@+id/smart_attend_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:thumb="@drawable/bg_thumb"
            android:track="@drawable/bg_track"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loc_check_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/location_check"
            android:textSize="@dimen/_16sdp" />

        <Switch
            android:id="@+id/location_check_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:thumb="@drawable/bg_thumb"
            android:track="@drawable/bg_track"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/seekbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/muli"
            android:text="@string/expiry_time"
            android:textSize="@dimen/_16sdp" />

        <SeekBar
            android:id="@+id/expiry_time_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:max="4"
            android:progressDrawable="@drawable/custom_seekbar_track"
            android:thumb="@drawable/custom_seekbar_thumb" />

        <TextView
            android:id="@+id/expiry_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/expiry_time_val"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/take_attend_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:backgroundTint="#0065ff"
        android:contentDescription="@string/submit"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/take"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sdp" />
</LinearLayout>