<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".login_screen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/logo_image"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/logo_at_top" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:src="@drawable/gif" />

        <Button
            android:id="@+id/button1"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:backgroundTint="#0065ff"
            android:contentDescription="@string/button1_text"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/button1_text"
            android:textSize="@dimen/_15sdp"
            app:cornerRadius="15dp"
            app:icon="@drawable/student"
            app:iconGravity="start"
            app:iconSize="@dimen/_25sdp"
            app:iconTint="#FF8C00" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:backgroundTint="#0065ff"
            android:contentDescription="@string/button2_text"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/button2_text"
            android:textSize="@dimen/_15sdp"
            app:cornerRadius="15dp"
            app:icon="@drawable/teacher"
            app:iconGravity="start"
            app:iconSize="@dimen/_25sdp"
            app:iconTint="#FF8C00" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:backgroundTint="#0065ff"
            android:contentDescription="@string/button3_text"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/button3_text"
            android:textSize="@dimen/_15sdp"
            app:cornerRadius="15dp"
            app:icon="@drawable/parent"
            app:iconGravity="start"
            app:iconSize="@dimen/_30sdp"
            app:iconTint="#FF8C00" />
    </LinearLayout>
</ScrollView>