<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".student_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/Relative_layout_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <Button
                android:id="@+id/back_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/back_arrow"
                app:icon="@drawable/ic_arrow_back"
                app:iconGravity="top"
                app:iconSize="@dimen/_25sdp"
                app:iconTint="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/back_button"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/signin_illustrator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:layout_below="@id/Relative_layout_1"
            android:contentDescription="@string/signin_illustrator"
            android:scaleType="centerCrop"
            android:src="@drawable/signin_2" />

        <EditText
            android:id="@+id/enr_no"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@id/signin_illustrator"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/button_1"
            android:drawableStart="@drawable/enr_no_icon"
            android:drawablePadding="@dimen/_9sdp"
            android:hint="@string/enrollment_number"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="12"
            android:paddingStart="@dimen/_7sdp"
            android:paddingEnd="@dimen/_7sdp"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/mob_no"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@id/enr_no"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_70sdp"
            android:background="@drawable/button_1"
            android:drawableStart="@drawable/mobile_no_icon"
            android:drawablePadding="@dimen/_14sdp"
            android:hint="@string/mobile_no"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_30sdp">

            <Button
                android:id="@+id/login_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:backgroundTint="#0065ff"
                android:contentDescription="@string/login"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="@dimen/_17sdp"
                app:cornerRadius="@dimen/_8sdp" />

            <ProgressBar
                android:id="@+id/pgbar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>
    </RelativeLayout>
</ScrollView>