<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".leave_data">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/line_layout"
            android:orientation="vertical">
            <EditText
                android:id="@+id/leave_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/button_1"
                android:hint="@string/leave_name"
                android:inputType="text"
                android:maxLength="20"
                android:paddingStart="@dimen/_7sdp"
                android:paddingEnd="@dimen/_7sdp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/button_1"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/staff_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:fontFamily="@font/poppins_medium"
                    android:id="@+id/auto_complete_txt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_7sdp"
                    android:background="@drawable/button_1"
                    android:inputType="none"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <EditText
                android:id="@+id/from_date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/button_1"
                android:fontFamily="@font/poppins_medium"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="@dimen/_14sdp"
                android:hint="@string/from_date"
                android:importantForAutofill="no"
                android:inputType="none"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                tools:ignore="TextFields" />
            <EditText
                android:id="@+id/to_date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/button_1"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="@dimen/_14sdp"
                android:hint="@string/to_date"
                android:importantForAutofill="no"
                android:inputType="none"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                tools:ignore="TextFields" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/leave_description"
                android:layout_marginLeft="@dimen/_5sdp"
                android:background="@drawable/button_1"
                android:layout_marginBottom="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_1"
                    android:textSize="@dimen/_14sdp"
                    android:lines="12"
                    android:fontFamily="@font/poppins_medium"
                    android:maxLength="256"
                    android:gravity="top" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            android:id="@+id/submit_button"
            android:layout_alignParentBottom="true"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:backgroundTint="#0065ff"
            android:contentDescription="@string/submit"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="@dimen/_17sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            app:cornerRadius="@dimen/_8sdp" />
    </RelativeLayout>
</ScrollView>